arkts_static_test/10_Interfaces/ets_cases/10.4.1_Required_Interface_Properties/compile-pass/ITF_10_04_01_003_PASS_GETTER_SETTER.ets
/*
* Copyright (c) 2021-2026 Huawei Device Co., Ltd.
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
*/
/**
 * @id ITF_10_04_01_003_PASS_GETTER_SETTER
 * @expect compile-pass
 * @section 10.4.1
 * @design getter/setter 形式
 * @note 正向用例：验证 getter+setter 访问器声明
 */
interface Style {
    get color(): string;
    set color(s: string);
}
